# ozitools

./: .cdtconfigure.Build (GNU)  .cproject  .gitignore  .project  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  ozitools.spec  ozitools.spec.in
data/: Makefile.am  Makefile.in
man/: Makefile.am  Makefile.in  map2geotiff.1  ozf2tiff.1
src/: Makefile.am  Makefile.in  log_stream.cpp  map2geotiff.in.pl  map2geotiff.pl.in  ozf2tiff.c  ozf_decoder.cpp  ozf_decoder.h  ozf_driver.cpp  ozi_driver.cpp  ozidriver.cpp  ozidriver.h
