#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])

m4_define([VERSION_MAJOR], [1])
m4_define([VERSION_MINOR], [0])
m4_define([VERSION_MICRO], [2])

AC_INIT([ozitools], [VERSION_MAJOR.VERSION_MINOR.VERSION_MICRO], [dev@beonway.ru])
AC_CONFIG_SRCDIR([src/ozf2tiff.c])
AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES(Makefile src/Makefile data/Makefile man/Makefile)

AC_CONFIG_FILES(src/map2geotiff.pl)
AC_CONFIG_FILES(ozitools.spec)

AM_INIT_AUTOMAKE([1.11 -Wall -Werror no-dist-gzip dist-bzip2])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_SED
AC_PATH_PROG(CP, cp)
AC_PATH_PROG(RM, rm)
AC_PATH_PROG(CHMOD, chmod)
AC_PATH_PROG(GZIP, gzip)
AC_PATH_PROG(PERL, perl)
AC_PATH_PROG(GDAL_TRANSLATE, gdal_translate)
AC_PATH_PROG(GDALWARP, gdalwarp)

AC_CHECK_PERL_MODULES(Geo::OSR,,AC_MSG_WARN(Need GDAL Perl bingings))
AC_CHECK_PERL_MODULES(Geo::GDAL,,AC_MSG_WARN(Need GDAL Perl bingings))
AC_CHECK_PERL_MODULES(Getopt::Long,,AC_MSG_WARN(Need Getopt::Long Perl module))

# Checks for libraries.
AC_CHECK_LIB(tiff, main)
AC_CHECK_LIB(z, main)

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stdlib.h stdint.h sys/stat.h sys/types.h sys/mman.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_INT16_T
AC_TYPE_UINT16_T
AC_TYPE_INT32_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MMAP

AC_OUTPUT
